--- a/src/assets/styles/views/_TableView.scss
+++ b/src/assets/styles/views/_TableView.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   background-color: #fafafa;
   min-height: 100vh;
+  z-index: 10;
 
   .table-number {
     margin: 0;
@@ -23,7 +24,6 @@
     width: 275px;
     border: 0.5px solid #e0e0e0;
     border-radius: 16px;
-    z-index: 10;
     box-shadow: 0px 6px 16px #00000034;
     margin-bottom: 72px;
 
@@ -53,6 +53,7 @@
         height: 54px;
         border-radius: 12px;
         border: 1px solid #e0e0e0;
+        object-fit: cover;
       }
 
       &._4 {
@@ -141,6 +142,7 @@
           width: 40px;
           border: 1px solid #ebebeb;
           border-radius: 8px;
+          object-fit: cover;
         }
       }
 
